# plank

./: ChangeLog  Makefile.in  README.md  aclocal.m4  config.h.in  configure  update-po.sh
data/: Makefile.am  plank-setting.desktop.in
data/apport/: Makefile.in
data/icons/: Makefile.am  Makefile.in
data/themes/: Makefile.am
data/themes/Default/: dock.theme  hover.theme
debian/: changelog  control  rules
debian/patches/: 0001_changed-plank-positioning-according-to-workarea.patch
docklets/: Makefile.in
docklets/Applications/: Makefile.in
docklets/Battery/: Makefile.in
docklets/CPUMonitor/: Makefile.in
docklets/Clippy/: Makefile.in
docklets/Clock/: Makefile.in
docklets/Desktop/: Makefile.in
docklets/Trash/: Makefile.in
docs/: Makefile.am  Makefile.in
examples/: Makefile.in
lib/: Makefile.in
lib/Widgets/: TitledSeparatorMenuItem.vala
po/: POTFILES.in  am.gmo  am.po  ar.gmo  ar.po  bg.gmo  bg.po  bs.gmo  bs.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en_AU.gmo  en_AU.po  en_CA.gmo  en_CA.po  en_GB.gmo  en_GB.po  eo.gmo  eo.po  es.gmo  es.po  et.gmo  et.po  eu.gmo  eu.po  fi.gmo  fi.po  fr.gmo  fr.po  ga.gmo  ga.po  gd.gmo  (+78 more)
src/: Makefile.in
tests/: Makefile.in
vapi/: Makefile.in
